리팩터링 및 메서드 추출