@@ -1,21 +1,21 @@
-package hello.board.service;
+package hello.board.service.user;
 
 import hello.board.domain.Role;
 import hello.board.domain.comment.CommentDto;
-import hello.board.domain.post.PostDto;
+import hello.board.domain.post.MyPagePostDto;
 import hello.board.domain.user.User;
 import hello.board.domain.user.UserForm;
 import hello.board.domain.user.UserPostsAndCommentsDto;
 import hello.board.repository.CommentRepository;
 import hello.board.repository.PostRepository;
 import hello.board.repository.UserRepository;
+import hello.board.service.EntityFinder;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional(readOnly = true)
@@ -49,18 +49,26 @@ public class UserService {
     public UserPostsAndCommentsDto getUserPostsAndComments(String username) {
         User user = entityFinder.getLoginUser(username);
 
-        List<PostDto> posts = postRepository.findByUserOrderByPostDateDesc(user).stream()
-                .map(post -> new PostDto(post.getId(), post.getTitle(), post.getPostDate()))
-                .toList();
+        List<MyPagePostDto> posts = getMyPagePostDto(user);
 
-        List<CommentDto> comments = commentRepository.findByUserOrderByCommentDateDesc(user).stream()
+        List<CommentDto> comments = getCommentDto(user);
+
+        return new UserPostsAndCommentsDto(posts, comments);
+    }
+
+    private List<MyPagePostDto> getMyPagePostDto(User user) {
+        return postRepository.findByUserOrderByCreateDateTimeDesc(user).stream()
+                .map(post -> new MyPagePostDto(post.getId(), post.getTitle(), post.getCreateDateTime()))
+                .toList();
+    }
+
+    private List<CommentDto> getCommentDto(User user) {
+        return commentRepository.findByUserOrderByCreateDateTimeDesc(user).stream()
                 .map(comment -> new CommentDto(
                         comment.getId(),
                         comment.getPost().getId(),
                         comment.getContent(),
-                        comment.getCommentDate()))
-                .collect(Collectors.toList());
-
-        return new UserPostsAndCommentsDto(posts, comments);
+                        comment.getCreateDateTime()))
+                .toList();
     }
 }
